--- a/package.json
+++ b/package.json
@@ -24,18 +24,30 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "build": "npm install && grunt",
+    "start": "grunt watch",
+    "test": "grunt"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt": "~0.4.2"
+    "archiver": "0.5.2",
+    "gzip-js": "0.3.2",
+    "load-grunt-tasks": "0.3.0",
+    "requirejs": "2.1.10",
+    "shelljs": "0.2.6",
+    "grunt": "0.4.2",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-jshint": "0.8.0",
+    "grunt-contrib-uglify": "0.3.2",
+    "grunt-contrib-watch": "0.5.3",
+    "grunt-bowercopy": "0.7.1",
+    "grunt-compare-size": "0.4.0",
+    "grunt-git-authors": "1.2.0",
+    "grunt-jsonlint": "1.0.4"
   },
   "peerDependencies": {
     "grunt": "~0.4.2"
   },
   "keywords": [
-    "gruntplugin"
+    "GraceJS"
   ]
 }
